--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
-.move-button {
+body {
+  margin: 0;
+  padding-top: 100px;
+  background-color: rgb(37, 19, 19);
+}
+
+.gameplay-buttons {
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.move-icon {
+  height: 150px;
+  justify-content: center;
+}
+
+.move-button {
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
+  border: 3px solid white;
+  background-color: transparent;
+  margin-right: 40px;
+  cursor: pointer;
+}
+
+.scoreboard-area{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-right: 40px;
+}
+.scoreboard-title{
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  color: white;
+  font-size: 40px;
 }
